# pd-neimog

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pd-neimog-help.pd  python.py
Abstractions/: binaural.pd  c.instrument.pd  c.midi-in.pd  c.sounds.pd  record.pd
Abstractions/Vst3/: fire.pd
Abstractions/vst/: c.dragon.pd  c.dragonly.pd  c.fire.pd
Help-Patches/: follower~-help.pd  onsetsds~-help.pd
Sources/: neimog.cpp  neimog.hpp
Sources/Arrays/: a.rotate.cpp  a.sum.cpp
Sources/Divergence/: kullback-leibler.cpp  renyi.cpp
Sources/Follower/: follower.cpp  follower.hpp  score.cpp  score.hpp
Sources/arrays/: a.sum (Copy).cpp
Sources/lua/: l.orchidea.pd_lua
Sources/lua/upic/: l.attrfilter.pd_lua  l.attrget.pd_lua  l.playpath.pd_lua  l.readsvg.pd_lua
Sources/manipulations/: transposer~-help.pd  transpose~.cpp
Sources/mir/: bock-onset~.cpp
Sources/mir/onsetsds~/: CMakeLists.txt  onsetsds~.c
Sources/musesampler~/Sources/Musescore/: apitypes.h
Sources/statistics/: euclidean.cpp  kullback-leibler.cpp
